--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <div class="container">
     <h1>DỰ ĐOÁN TUỔI CỦA BẠN</h1>
-    <input id="birthYear" type="number" placeholder="Ví dụ: 2008">
-    <button onclick="tinhtuoi()">Tính tuổi</button>
+    <input id="birthYear" type="number" placeholder="nhập năm sinh">
+    <button onclick="tinhtuoi()">Dự đoán</button>
     <p id="result"></p>
   </div>
 
