--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <h1>Tất cả những bình luận</h1>
-  
+  <p>nhấn vào để copy</p>
   <div class="controls">
     <div class="actions">
       <button class="reset" onclick="resetCopied()">RESET</button>
